--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "bootstrap": "^4.5.3",
     "firebase": "^7.14.1",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "ngx-cookie-service": "^11.0.2",
     "ngx-device-detector": "^2.0.5",
     "rxjs": "~6.6.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
