--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "^11.0.9",
     "@angular/router": "~11.0.5",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@fullcalendar/angular": "^5.5.0",
+    "@fullcalendar/bootstrap": "^5.5.0",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^4.5.3",
     "firebase": "^7.24.0",
