--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@fullcalendar/interaction": "^5.5.0",
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "firebase": "^7.24.0",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
+    "ng2-charts": "^2.4.2",
     "ngx-cookie-service": "^11.0.2",
     "ngx-device-detector": "^2.0.5",
     "rxjs": "~6.6.0",
